[package]
name = "poolwatcher"
authors = ["Jrmmr <saucissefrite@pm.me>"]
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.72"
serde = "1.0.131"
serde_derive = "1.0.131"
anyhow = "1.0.45"
websocket = "0.26.2"
reqwest = { version="0.11.10", features = ["json"] }
log = "0.4.0"

